[package]
name = "imgui-backends"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

[dependencies]
imgui = "0.7.0"

# platform
sdl2 = { version = "0.34.3", optional = true }
winit =  { version = "0.24.0", optional = true }

# renderer
fna3d = { version = "0.1.5", optional = true }
rokol = { git = "https://github.com/toyboot4e/rokol", rev = "9b46cb5", optional = true }
glow = { version = "0.8.1", optional = true }

# example
anyhow = "1.0.38"
log = "0.4.14"
env_logger = "0.8.3"
thiserror = "1.0.24"
