[package]
name = "imgui-backends"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

[features]
sdl2-rokol-gl = ["sdl2", "rokol/sdl2", "rokol/impl-gfx", "rokol/glcore33"]

[dependencies]
imgui = "0.8.0"

# platform
sdl2 = { version = "0.34.5", optional = true }
winit =  { version = "0.24.0", optional = true }

# renderer
fna3d = { version = "0.1.5", optional = true }
rokol = { path = "../snow2d/crates/rokol/rokol", version = "0.3.0", optional = true }
glow = { version = "0.8.1", optional = true }

# example
anyhow = "1.0.38"
log = "0.4.14"
env_logger = "0.8.3"
thiserror = "1.0.24"
